tests/snapshots/main/bad_command.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - bad-command
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unrecognized subcommand 'bad-command'

Usage: kermit [OPTIONS] <COMMAND>

For more information, try '--help'.
