tests/snapshots/main/bad_url_base.snap
---
source: tests/utils.rs
assertion_line: 18
info:
  program: kermit
  args:
    - "--url"
    - invalid-url
    - infos
    - version
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid node URL: invalid-url
