tests/snapshots/main/help.snap
---
source: tests/utils.rs
assertion_line: 18
info:
  program: kermit
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: kermit [OPTIONS] <COMMAND>

Commands:
  events        Event for contract, block and hash [aliases: e]
  infos         Infos about node and hashrate [aliases: i]
  transactions  Transactions management utilities [aliases: tx]
  wallets       Wallet management utilities [aliases: w]
  address       Address management utilities [aliases: a]
  contracts     Contract management utilities [aliases: c]
  help          Print this message or the help of the given subcommand(s)

Options:
  -u, --url <URL>
          Node address; use this only if you want to override the URL from the selected network type [env: URL=]
  -c, --config-file-path <CONFIG_FILE_PATH>
          Path to the config YAML file [default: ./alephium.config.yaml]
  -n, --network <NETWORK>
          [default: dev] [possible values: main, test, dev]
  -h, --help
          Print help
  -V, --version
          Print version

----- stderr -----
